# zetgame

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  HISTORY  HISTORY.md  README.md  TODO  ZetGame.c  ZetGame.h  build_3rdparty.sh  build_gcc.sh  cmd_to_build_3rdparty.bat
src/: CMakeLists.txt  ZetGame.c  ZetGame.h  zetgame.c  zetgame.h
src/animation/: @zg_animation.c  @zg_animation.h  Action.c  Action.h  Animation.c  ChannelsInfo.c  KeyframePoint.c  KeyframeTrack.c  KeyframeTrack.h  KeyframeTrackGroup.c  KeyframeTrackGroup.h  MaterialAction.c  MaterialAction.h  MaterialAnimation.c  MaterialAnimation.h  TransformAction.c  TransformAction.h  TransformAnimation.c  TransformAnimation.h  Tween.c  Tween.h  ZG_Action.c  ZG_Action.h  ZG_Animation.c  ZG_Animation.h  ZG_ChannelsInfo.c  ZG_ChannelsInfo.h  ZG_Ease.c  ZG_Ease.h  ZG_KeyframePoint.c  ZG_KeyframePoint.h  ZG_KeyframeTrack.c  ZG_KeyframeTrack.h  ZG_KeyframeTrackGroup.c  ZG_KeyframeTrackGroup.h  ZG_MaterialAction.c  ZG_MaterialAction.h  ZG_MaterialAnimation.c  ZG_MaterialAnimation.h  ZG_TransformAction.c  (+12 more)
src/assets/font/: pf_arma_five.ttf.c
src/assets/image/: button1.png.c  default.png.c  silk_icons_preview.png.c
src/base/: @zg_base.c  @zg_base.h  Bit.c  BufferByte.c  BufferFloat.c  BufferShort.c  Directory.c  File.c  FileSystem.c  Guid.c  List.c  Log.c  Log.h  MapInt.c  MapInt.h  MapString.c  MapStringIterator.c  MapStringIterator.h  Path.c  Rand.h  StrUtils.c  StrUtils.h  Term.c  ZG_Bit.c  ZG_Bit.h  ZG_BufferByte.c  ZG_BufferByte.h  ZG_BufferFloat.c  ZG_BufferFloat.h  ZG_BufferShort.c  ZG_BufferShort.h  ZG_Directory.c  ZG_Directory.h  ZG_File.c  ZG_File.h  ZG_FileSystem.c  ZG_FileSystem.h  ZG_Guid.c  ZG_Guid.h  ZG_List.c  (+26 more)
src/base/gl/: gldebug.c  gldebug.h  glextra.c  glextra.h
src/base/jpeg/: jpeg.c  jpeg_mem.c
src/base/sdl/: SDL_extra.c  SDL_extra.h  SDL_mem.c  SDL_mem.h  _zg_base_sdl_.c  _zg_base_sdl_.h
src/component_system/: zg_component_system.c  zg_component_system.h
src/component_system/animation/: AnimationSystem.c  AnimationSystem.h
src/component_system/collision/: CollisionSystem.c
src/component_system/entity/: Entity.c  Entity.h  EntityManager.c  EntityManager.h  EntitySystem.c  EntitySystem.h
src/device/video/: ZG_Video.c  ZG_Video.h  ZG_VideoDevice.c  ZG_VideoDevice.h  ZG_VideoDevice_WIN.c  ZG_Video_GL.c  ZG_Window.c  ZG_Window.h  ZG_WindowEvents_WIN.c  ZG_WindowEvents_X11.c  ZG_Window_WGL.c  ZG_Window_WIN.c
src/ecs/: @zg_ecs.h  _zg_ecs_.c  _zg_ecs_.h  zg_ecs.c  zg_ecs.h
src/ecs/animation/: AnimationSystem.c  AnimationSystem.h  ZG_AnimationManager.c  (+5 more)
src/events/: ZG_Event.h  ZG_Events.c  ZG_Events.h  ZG_EventsKeyboard.c  ZG_EventsKeyboard_WIN.c  ZG_EventsMouse.c  ZG_Events_WIN.c  ZG_Events_X11.c  ZG_Keyboard.c  ZG_Keyboard_WIN.c  ZG_Keycode.h  ZG_Mouse.c  ZG_Scancode.h
src/graphics/: @zg_graphics.c  @zg_graphics.h  Appearance.c  Appearance_GL.c  Color4f.c  Color4f.h  Geometry.c  Geometry.h  Geometry_GL.c  Graphics.c  Graphics.h  Graphics_GL.c  Graphics_Win32.c  IconManager.c  IconManager.h  Image.c  Image.h  ImageManager.c  ImageManager.h  Light.c  Material.c  Material.h  Shader.c  Shader_GL.c  Shape.c  Shape.h  Shape2d.c  Shape2d.h  TTFont.c  TTFont.h  TTFontManager.c  TTFontManager.h  TTFont_GL.c  TextBox.c  TextBox.h  Texture.c  Texture.h  TextureManager.c  TextureManager.h  Texture_GL.c  (+74 more)
src/gui/: @zg_gui.c  @zg_gui.h  GUIButton.c  GUIButton.h  GUIFrame.c  GUILabel.c  GUILabel.h  GUITextBox.c  GUITextBox.h  GUITextbox.c  GUITextbox.h  GUITexture.c  GUIViewer.c  GUIViewer.h  GUIWidget.c  GUIWidget.h  GUIWindow.c  GUIWindow.h  GUIWindowManager.c  GUIWindowManager.h  ZG_ButtonGUI.c  ZG_ButtonGUI.h  ZG_FrameGUI.c  ZG_GUIButton.c  ZG_GUIButton.h  ZG_GUIFrame.c  ZG_GUIFrame.h  ZG_GUITextBox.c  ZG_GUITextBox.h  ZG_GUITexture.c  ZG_GUITexture.h  ZG_GUIWidget.c  ZG_GUIWidget.h  ZG_GUIWindow.c  ZG_GUIWindow.h  ZG_GUIWindowManager.c  ZG_GUIWindowManager.h  ZG_GUIWindowXml.c  ZG_TextBoxGUI.c  ZG_TextBoxGUI.h  (+11 more)
src/input/: @zg_input.h  Input.c  Input.h  Input_Win32.c  ZG_Input.c  ZG_Input.h  ZG_Input_Win32.c  ZG_Keys.h  _zg_input_.c  _zg_input_.h  def_keys.h
src/math/: @zg_math.h  BoundingBox.c  BoundingBox.h  Luts.c  Luts.h  Matrix4f.c  Matrix4f.h  Quaternion.c  Quaternion.h  Rectangle4f.c  Rectangle4i.c  Rectangle4i.h  Rectanglef.h  Rectanglei.c  Rectanglei.h  Vector2f.c  Vector2f.h  Vector3f.c  Vector3f.h  ZG_BoundingBox.c  ZG_BoundingBox.h  ZG_Luts.c  ZG_Luts.h  ZG_Matrix3f.c  ZG_Matrix3f.h  ZG_Matrix4f.c  ZG_Matrix4f.h  ZG_Quaternion.c  ZG_Quaternion.h  ZG_Rectangle4f.c  ZG_Rectangle4f.h  ZG_Rectangle4i.c  ZG_Rectangle4i.h  ZG_Vector2f.c  ZG_Vector2f.h  ZG_Vector2i.c  ZG_Vector2i.h  ZG_Vector3f.c  ZG_Vector3f.h  ZG_Vector3i.h  (+6 more)
src/mmedia/: @zg_mmedia.c  @zg_mmedia.h  _zg_mmedia_.h  zg_mmedia.c
src/particle/: ParticleEmitter.h  ParticleEmitterManager.c  ParticleEmitterManager.h  zg_particle.c  zg_particle.h  zg_psystem.h
src/physics/: @zg_physics.h  _zg_physics.h  _zg_physics_.c  zg_physics.c  zg_physics.h
src/plugin/: zg_plugin.c  zg_plugin.h
src/psystem/: Particle.c  ParticleEmitter.c  ParticleEmitter.h  ParticleSystem.c  ParticleSystem.h  zg_psystem.c
src/scene/: @zg_scene.c  @zg_scene.h  Scene.c  Scene.h  SceneState.c  SceneState.h  zg_scene.c  zg_scene.h
src/sprite/: @zg_sprite.c  @zg_sprite.h  SpriteKeyFrame.c  SpriteKeyFrame.h  SpriteKeyFrameManager.c  SpriteKeyFrameManager.h  SpriteKeyFramePack.c  SpriteKeyFrameResource.c  ZG_SpriteKeyFrame.c  ZG_SpriteKeyFrame.h  ZG_SpriteKeyFrameManager.c  ZG_SpriteKeyFrameManager.h  ZG_SpriteKeyFrameResource.c  _zg_sprite.h  _zg_sprite_.h  zg_sprite.c
src/system/: Bit.c  BufferShort.h  File.h  FileSystem.c  FileSystem.h  Guid.c  Log.c  MapString.h  Path.c  Path.h  StrUtils.c  Term.c  Term.h  common.h  defines.h  util-fmemopen.c  zg_memory.c  zg_system.c  zg_system.h
src/tilemap/: @zg_tilemap.h  Tilemap.c  Tilemap.h  TilemapManager.c  TilemapManager.h  TilemapResource.c  TilemapWorld.c  TilemapWorld.h  ZG_Tilemap.c  ZG_Tilemap.h  ZG_TilemapManager.c  ZG_TilemapManager.h  _zg_tilemap.c  _zg_tilemap_.c  zg_tilemap.h
(+538 files in other folders)
